fix arrow align

--- a/erkison.css
+++ b/erkison.css
@@ -121,6 +121,7 @@ body {
     }
 }
 #arrow {
+    padding: 0;
     position: absolute;
     bottom: 20px;
     font-size: 42px;  
